# rt-etl-yahoo-search-engine

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  create_topics.sh  create_topics_docker.sh  docker-compose.yml  init-db.sql  pyproject.toml  wait-for-postgres.sh
client/: streamlit_app.py
client/models/client_level_data_classes/input/: status_input.py
client/models/client_level_data_classes/output/: search_status.py  single_search_result.py
client/utils/: query_service.py  screenshot_yahoo_search.py
database/: env.py  tables.py
database/versions/: 34ce44675e1e_create_tables.py  55303ac03b06_add_tables.py  f820b24d57a1_create_tables.py
integration_tests/src/config/: config.toml
integration_tests/src/consumers/: test_consumers.py  test_producers.py
integration_tests/src/services/daos/: test_status_dao.py
integration_tests/src/utils/: clear_tables.py  engine.py
src/: app.py  extractor_process.py  router.py  yahoo_search_consumer_producer.py  yahoo_search_process.py
src/config/: config.toml
src/consumers/: consumers.py  producers.py
src/models/: raw_search_results.py  raw_search_terms.py  status_dto.py
src/models/dto_data_classes/: extracted_search_result_dto.py  status_dto.py
src/models/dtos/: extracted_search_result_dto.py  raw_search_results_dto.py
src/models/extractor_data_classes/: extracted_search_result.py  extracted_text.py  extracted_text_group.py
src/models/kafka_records/: raw_search_results.py
src/models/kafka_records_data_classes/: raw_search_results.py  raw_search_terms.py
src/models/service_level_data_classes/input/: result_input.py  search_input.py
src/models/service_level_data_classes/output/: search_response.py
src/services/: abstract_extractor.py  batcher_service.py  raw_search_results_dao.py  search_result_extractor.py  status_dao.py  yahoo_search_service.py
src/services/daos/: extracted_search_results_dao.py  raw_search_results_dao.py  status_dao.py
src/utils/: extract_text_utils.py
unit_tests/src/consumers/: test_consumers.py  test_producers.py
unit_tests/src/models/dto_data_classes/: test_extracted_search_result_dto.py  test_raw_search_result_dto.py  test_status_dto.py
unit_tests/src/models/extracted_data_classes/: test_extracted_search_result.py
unit_tests/src/services/extractors/: test_bs4_extractor.py
