[tool.poetry]
name = "rt-etl-yahoo-search-engine"
version = "0.1.0"
description = "RT ETL Pipeline for Yahoo Search Engine"
authors = ["Elson Chan <elsonccjgmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.5.3"
aiohttp = "^3.10.5"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
pydantic = "^2.9.2"
asyncpg = "^0.29.0"
greenlet = "^3.1.0"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
retry = "^0.9.2"
types-retry = "^0.9.9.4"
pandas = "^2.2.3"
requests = "^2.32.3"
bs4 = "^0.0.2"
types-requests = "^2.32.0.20240914"
types-beautifulsoup4 = "^4.12.0.20240907"
streamlit = "^1.38.0"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"
pillow = "^10.4.0"
pytest = "^8.3.3"
freezegun = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
ruff = "^0.6.5"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = false  # Global setting for missing imports
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "confluent_kafka.*"
ignore_missing_imports = true  # Specific override for confluent_kafka

